--- a/angular.json
+++ b/angular.json
@@ -27,8 +27,8 @@
                 "output": "/assets/public"
               }
             ],
-            "styles": ["src/styles.css",  "node_modules/bootstrap/dist/css/bootstrap.min.css"],
-            "scripts": [ "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"]
+            "styles": ["src/styles.css"],
+            "scripts": []
           },
           "configurations": {
             "production": {
@@ -86,7 +86,7 @@
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
-            "scripts": ["node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"]
+            "scripts": []
           }
         }
       }
